Bump MRI to SNAPSHOTS
Adopt the following versions:
- odlparent-10.0.0
- infrautils-3.0.0
- yangtools-8.0.2
- mdsal-9.0.1
- controller-5.0.1
- aaa-0.15.1
- netconf-3.0.0

Change-Id: I7dfe7fdbf88eb787a59e031e24559a9601fde878
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>